GITBOOK-397: Runbooks use cases and getting started