@@ -4,496 +4,419 @@ Code migrations can be of a few flavors - upgrading a library (e.g. SQLAlchemy 1
 
 Typically large migrations can require multiple teams collaboration and may be spread over a huge amount of codebase. Using Runbooks these migrations can be planned out with all teams involved and executed step by step while ensuring compatibility.
 
-Remote Agents framework also comes pre-bundled with a library of Runbook templates that can be used as a starting point while adding more context of the nuances associated with your own codebase.
+Remote Agents framework also comes pre-bundled with a [library of Runbook templates](https://app.gitbook.com/u/GiP7gy25T1PyTDBn6q6NumuZlxk2) that can be used as a starting point while adding more context of the nuances associated with your own codebase.
 
-**Example: Java 8 to Java 17 Migration**
+### When to use
 
-<details>
+#### Ideal scenarios
 
-<summary>Java 8 to Java 17 migration template</summary>
+* **Framework upgrades**: Moving to newer versions of React, Angular, Vue, or other frameworks
+* **Language migrations**: Converting from one programming language to another
+* **Architecture evolution**: Moving from monolith to microservices or updating patterns
+* **Technology stack modernization**: Updating to modern tools and best practices
+* **Platform migrations**: Moving between cloud platforms or infrastructure patterns
 
-````
-# Java 8 to Java 17 Migration Runbook
+#### Perfect for teams that
 
-## Metadata
-- **Runbook ID**: JAVA-MIG-8-17-001
-- **Version**: 1.0
-- **Created**: 2024-01-15
-- **Author**: Platform Team
-- **Estimated Duration**: 40-80 hours (varies by codebase size)
-- **Risk Level**: Medium-High
-- **Rollback Strategy**: Git revert to tagged release
+* Need to upgrade legacy applications to modern frameworks
+* Want to adopt new technologies without rewriting everything from scratch
+* Have tight deadlines for technology updates
+* Need to maintain functionality during migration
+* Want to minimize migration risks and ensure consistency
 
-## Objective
-Migrate Java 8 codebase to Java 17, leveraging new language features, improving performance, and ensuring compatibility with modern Java ecosystem while maintaining backward compatibility where required.
+### Pre-built migration templates
 
-## Prerequisites
-- Comprehensive test suite with >80% code coverage
-- CI/CD pipeline with automated testing
-- Current Java 8 codebase building successfully
-- Backup of current production deployment
+#### Frontend framework migrations examples
 
----
+**React Migration Templates**
 
-## 1. Pre-Migration Analysis
+* **React 16 to 18**: Updates React APIs, lifecycle methods, and new features
+* **Class components to hooks**: Converts class-based components to functional components
+* **Enzyme to react testing library**: Updating the rendering and quering method
+* **PropTypes to TypeScript**: Adds static type checking with TypeScript
 
-### 1.1 Dependency Audit
-Analyze all project dependencies for Java 17 compatibility.
+**Angular Migration Templates**
 
-#### 1.1.1 Maven Dependencies Analysis
-```xml
-<!-- Check current dependency versions -->
-<plugin>
-    <groupId>org.codehaus.mojo</groupId>
-    <artifactId>versions-maven-plugin</artifactId>
-    <version>2.15.0</version>
-</plugin>
+* **Angular 12 to 15**: Handles breaking changes and new API adoptions
+* **AngularJS to Angular**: Complete framework migration with modern patterns
+* **Angular Forms migration**: Updates to reactive forms and validation patterns
+* **Angular Router updates**: Migrates routing configurations and guards
+
+**Vue Migration Templates**
+
+* **Vue 2 to Vue 3**: Comprehensive migration including Composition API
+* **Options API to Composition API**: Modernizes component structure
+* **Vuex to Pinia**: State management migration to modern patterns
+* **Vue Router updates**: Updates routing for Vue 3 compatibility
+
+#### Backend and language migrations
+
+**Java migration templates**
+
+* **Java 8 to 11**: Updates language features and deprecated APIs
+* **Java 11 to 17**: Adopts new language features and performance improvements
+* **Java 17 to 21**: Latest language features and virtual threads
+* **Spring Boot 2.x to 3.x**: Framework upgrade with configuration updates
+
+**Node.js migration templates**
+
+* **Node.js 14 to 18**: Runtime updates and new API adoption
+* **Node.js 16 to 20**: Performance improvements and feature updates
+* **Express.js upgrades**: Framework version migrations with middleware updates
+* **CommonJS to ES modules**: Module system modernization
+
+**Python migration templates**
+
+* **Python 2.7 to 3.x**: Complete language migration with syntax updates
+* **Django upgrades**: Framework version migrations with ORM updates
+* **Flask modernization**: Updates to modern Flask patterns and features
+* **Async/Await migration**: Converts callback patterns to modern async syntax
+
+#### Infrastructure and platform migrations
+
+**Cloud platform migrations**
+
+* **File storage migration**: Migration to AWS, Azure, or Google Cloud
+* **Docker Optimization**: Container best practices and multi-stage builds
+* **CI/CD Platform Migration**: Jenkins to GitHub Actions, Travis to GitLab CI
+
+**Database migration templates**
+
+* **MySQL 5.7 to 8.0**: Database version upgrades with compatibility fixes
+* **PostgreSQL Upgrades**: Version migrations with feature adoption
+* **MongoDB Updates**: NoSQL database version and API migrations
+
+### Migration without a template
+
+#### 1. Migration assessment and planning
+
+Start by describing your migration goals:
+
+```
+"We need to migrate our React 16 application to React 18. The application includes:
+- 150+ components using class-based patterns
+- Legacy Context API implementation
+- Deprecated lifecycle methods
+- PropTypes for type checking
+- We want to adopt React 18 features while maintaining all functionality"
 ```
 
-#### 1.1.2 Gradle Dependencies Analysis
-```gradle
-// Apply versions plugin
-plugins {
-    id 'com.github.ben-manes.versions' version '0.47.0'
-}
-```
+**What Runbooks does:**
 
-#### 1.1.3 Identify Incompatible Libraries
-- Check for libraries using removed APIs
-- Verify JAXB, JAX-WS dependencies
-- Validate reflection-heavy frameworks
-- Document required library upgrades
+* Analyzes your entire codebase to understand current patterns
+* Identifies all components that need migration
+* Maps dependencies and potential breaking changes
+* Creates a comprehensive migration plan with risk assessment
 
-### 1.2 Code Analysis
+#### 2. Compatibility analysis
 
-#### 1.2.1 Deprecated API Usage
-```bash
-# Scan for deprecated APIs
-jdeprscan --release 17 --list --for-removal target/classes
-```
+Runbooks performs deep compatibility analysis:
 
-#### 1.2.2 Removed API Detection
-- Scan for `sun.*` package usage
-- Identify `com.sun.*` internal APIs
-- Check for JavaEE modules usage
-- Document all occurrences
+* **Breaking changes**: Identifies APIs that have changed or been removed
+* **Dependency updates**: Analyzes third-party library compatibility
+* **Feature adoption**: Recommends new features to adopt during migration
+* **Risk assessment**: Evaluates potential issues and mitigation strategies
 
-#### 1.2.3 Reflection and Unsafe Operations
-- Identify `setAccessible()` usage
-- Find `Unsafe` class usage
-- Check for illegal reflective access
-- Plan module access requirements
+#### 3. Incremental migration strategy
 
-### 1.3 Build System Preparation
+The AI creates a step-by-step migration plan:
 
-#### 1.3.1 Maven Configuration
-```xml
-<properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-    <maven.compiler.release>17</maven.compiler.release>
-</properties>
-```
+* **Infrastructure Updates**: Update build tools, dependencies, and configuration
+* **Core API Migration**: Update fundamental framework APIs and patterns
+* **Component Migration**: Convert components in dependency order
+* **Feature Enhancement**: Adopt new framework features and improvements
+* **Testing and Validation**: Comprehensive testing at each stage
 
-#### 1.3.2 Gradle Configuration
-```gradle
-java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
-}
-```
+#### 4. Automated implementation
 
----
+Runbooks executes migration systematically:
 
-## 2. Environment Setup
+* Updates one component or module at a time
+* Maintains functionality throughout the process
+* Runs tests after each change to ensure stability
+* Creates detailed pull requests explaining each migration step
 
-### 2.1 Development Environment
+### Real-world migration examples
 
-#### 2.1.1 Install JDK 17
-- Download OpenJDK 17 or preferred distribution
-- Configure `JAVA_HOME` environment variable
-- Update IDE to support Java 17
-- Configure IDE compiler settings
+#### Example 1: React Class to Hooks Migration
 
-#### 2.1.2 Build Tool Updates
-- Maven: Minimum version 3.8.1
-- Gradle: Minimum version 7.3
-- Update wrapper scripts
-- Verify plugin compatibility
+**Before Migration:**
 
-### 2.2 CI/CD Pipeline Configuration
+```javascript
+class UserProfile extends React.Component {
+  constructor(props) {
+    super(props);
+    this.state = {
+      user: null,
+      loading: true,
+      error: null
+    };
+  }
 
-#### 2.2.1 Update Build Images
-```yaml
-# Example: Jenkins Pipeline
-pipeline {
-    agent {
-        docker {
-            image 'maven:3.8.6-openjdk-17'
-        }
+  async componentDidMount() {
+    try {
+      const user = await api.getUser(this.props.userId);
+      this.setState({ user, loading: false });
+    } catch (error) {
+      this.setState({ error, loading: false });
     }
+  }
+
+  componentDidUpdate(prevProps) {
+    if (prevProps.userId !== this.props.userId) {
+      this.fetchUser();
+    }
+  }
+
+  fetchUser = async () => {
+    this.setState({ loading: true });
+    try {
+      const user = await api.getUser(this.props.userId);
+      this.setState({ user, loading: false });
+    } catch (error) {
+      this.setState({ error, loading: false });
+    }
+  }
+
+  render() {
+    const { user, loading, error } = this.state;
+    if (loading) return <LoadingSpinner />;
+    if (error) return <ErrorMessage error={error} />;
+    return <UserDetails user={user} />;
+  }
 }
 ```
 
-#### 2.2.2 Parallel Build Configuration
-- Maintain Java 8 build for comparison
-- Set up Java 17 build pipeline
-- Configure test result comparison
-- Implement gradual rollout strategy
+**After Runbooks Migration:**
 
----
+```javascript
+import { useState, useEffect, useCallback } from 'react';
 
-## 3. Core Language Migration
+const UserProfile = ({ userId }) => {
+  const [user, setUser] = useState(null);
+  const [loading, setLoading] = useState(true);
+  const [error, setError] = useState(null);
 
-### 3.1 Module System Adoption (Optional)
+  const fetchUser = useCallback(async () => {
+    setLoading(true);
+    setError(null);
+    try {
+      const userData = await api.getUser(userId);
+      setUser(userData);
+    } catch (err) {
+      setError(err);
+    } finally {
+      setLoading(false);
+    }
+  }, [userId]);
 
-#### 3.1.1 Create module-info.java
-```java
-module com.company.application {
-    requires java.base;
-    requires java.sql;
-    requires java.logging;
-    
-    exports com.company.api;
-    exports com.company.model;
-    
-    opens com.company.entity to hibernate.core;
-}
-```
+  useEffect(() => {
+    fetchUser();
+  }, [fetchUser]);
 
-#### 3.1.2 Handle Split Packages
-- Identify split package conflicts
-- Refactor package structures
-- Update imports across codebase
-- Test module boundaries
-
-### 3.2 Removed APIs Replacement
-
-#### 3.2.1 Replace JavaEE Dependencies
-```xml
-<!-- Remove -->
-<dependency>
-    <groupId>javax.xml.bind</groupId>
-    <artifactId>jaxb-api</artifactId>
-</dependency>
-
-<!-- Add -->
-<dependency>
-    <groupId>jakarta.xml.bind</groupId>
-    <artifactId>jakarta.xml.bind-api</artifactId>
-    <version>4.0.0</version>
-</dependency>
-```
-
-#### 3.2.2 Replace Internal APIs
-```java
-// Before: Using sun.misc.BASE64Encoder
-sun.misc.BASE64Encoder encoder = new sun.misc.BASE64Encoder();
-String encoded = encoder.encode(data);
-
-// After: Using java.util.Base64
-String encoded = Base64.getEncoder().encodeToString(data);
-```
-
-### 3.3 Language Feature Updates
-
-#### 3.3.1 Local Variable Type Inference
-```java
-// Before
-Map<String, List<Customer>> customerMap = new HashMap<>();
-for (Map.Entry<String, List<Customer>> entry : customerMap.entrySet()) {
-    List<Customer> customers = entry.getValue();
-}
-
-// After
-var customerMap = new HashMap<String, List<Customer>>();
-for (var entry : customerMap.entrySet()) {
-    var customers = entry.getValue();
-}
-```
-
-#### 3.3.2 Switch Expressions
-```java
-// Before
-String result;
-switch (day) {
-    case MONDAY:
-    case FRIDAY:
-    case SUNDAY:
-        result = "Short day";
-        break;
-    case TUESDAY:
-        result = "Long day";
-        break;
-    default:
-        result = "Regular day";
-}
-
-// After
-String result = switch (day) {
-    case MONDAY, FRIDAY, SUNDAY -> "Short day";
-    case TUESDAY -> "Long day";
-    default -> "Regular day";
+  if (loading) return <LoadingSpinner />;
+  if (error) return <ErrorMessage error={error} />;
+  return <UserDetails user={user} />;
 };
+
+export default UserProfile;
 ```
 
-#### 3.3.3 Text Blocks
-```java
-// Before
-String json = "{\n" +
-              "  \"name\": \"John\",\n" +
-              "  \"age\": 30\n" +
-              "}";
+#### Example 2: Python 2 to Python 3 Migration
 
-// After
-String json = """
-    {
-      "name": "John",
-      "age": 30
-    }
-    """;
+**Before Migration:**
+
+```python
+# Python 2 syntax and patterns
+import urllib2
+import ConfigParser
+
+class DataProcessor:
+    def __init__(self, config_file):
+        self.config = ConfigParser.ConfigParser()
+        self.config.read(config_file)
+
+    def fetch_data(self, url):
+        response = urllib2.urlopen(url)
+        data = response.read()
+        return unicode(data, 'utf-8')
+
+    def process_items(self, items):
+        for item in items:
+            print "Processing:", item
+            yield item.upper()
+
+    def get_keys(self, data_dict):
+        return data_dict.keys()
 ```
 
----
+**After Runbooks Migration:**
 
-## 4. Library and Framework Updates
+```python
+# Python 3 syntax and patterns
+import urllib.request
+import configparser
 
-### 4.1 Spring Framework Migration
+class DataProcessor:
+    def __init__(self, config_file):
+        self.config = configparser.ConfigParser()
+        self.config.read(config_file)
 
-#### 4.1.1 Update Spring Boot Version
-```xml
-<parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.5</version>
-</parent>
+    def fetch_data(self, url):
+        with urllib.request.urlopen(url) as response:
+            data = response.read()
+            return data.decode('utf-8')
+
+    def process_items(self, items):
+        for item in items:
+            print("Processing:", item)
+            yield item.upper()
+
+    def get_keys(self, data_dict):
+        return list(data_dict.keys())
 ```
 
-#### 4.1.2 Update Annotations
-```java
-// Replace @Autowired with constructor injection
-@Component
-public class UserService {
-    private final UserRepository repository;
-    
-    public UserService(UserRepository repository) {
-        this.repository = repository;
-    }
-}
-```
+#### Example 3: Angular 12 to 15 Migration
 
-### 4.2 Testing Framework Updates
+**Before Migration:**
 
-#### 4.2.1 JUnit 5 Migration
-```xml
-<dependency>
-    <groupId>org.junit.jupiter</groupId>
-    <artifactId>junit-jupiter</artifactId>
-    <version>5.10.0</version>
-    <scope>test</scope>
-</dependency>
-```
+```typescript
+// Angular 12 patterns
+import { Component, OnInit } from '@angular/core';
+import { FormBuilder, FormGroup, Validators } from '@angular/forms';
 
-#### 4.2.2 Update Test Annotations
-```java
-// Before: JUnit 4
-@RunWith(SpringRunner.class)
-@Test(expected = IllegalArgumentException.class)
-public void testMethod() {}
+@Component({
+  selector: 'app-user-form',
+  template: `
+    <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+      <input formControlName="name" placeholder="Name">
+      <input formControlName="email" placeholder="Email">
+      <button type="submit">Submit</button>
+    </form>
+  `
+})
+export class UserFormComponent implements OnInit {
+  userForm: FormGroup;
 
-// After: JUnit 5
-@ExtendWith(SpringExtension.class)
-@Test
-void testMethod() {
-    assertThrows(IllegalArgumentException.class, () -> {
-        // test code
+  constructor(private fb: FormBuilder) {}
+
+  ngOnInit() {
+    this.userForm = this.fb.group({
+      name: ['', Validators.required],
+      email: ['', [Validators.required, Validators.email]]
     });
-}
-```
+  }
 
-### 4.3 Logging Framework Updates
-
-#### 4.3.1 SLF4J and Logback Updates
-```xml
-<dependency>
-    <groupId>ch.qos.logback</groupId>
-    <artifactId>logback-classic</artifactId>
-    <version>1.4.11</version>
-</dependency>
-```
-
-#### 4.3.2 Log4j2 Migration (if applicable)
-```xml
-<dependency>
-    <groupId>org.apache.logging.log4j</groupId>
-    <artifactId>log4j-core</artifactId>
-    <version>2.21.1</version>
-</dependency>
-```
-
----
-
-## 5. Performance Optimizations
-
-### 5.1 JVM Flags Update
-
-#### 5.1.1 Remove Deprecated Flags
-```bash
-# Remove these flags
--XX:+UseConcMarkSweepGC
--XX:+CMSIncrementalMode
--XX:MaxPermSize=256m
-
-# Add modern alternatives
--XX:+UseG1GC
--XX:MaxRAMPercentage=75.0
-```
-
-#### 5.1.2 Add Performance Flags
-```bash
--XX:+UseStringDeduplication
--XX:+UseShenandoahGC  # Alternative GC
--XX:+EnableDynamicAgentLoading
-```
-
-### 5.2 Collection Factory Methods
-
-#### 5.2.1 Immutable Collections
-```java
-// Before
-List<String> list = new ArrayList<>();
-list.add("a");
-list.add("b");
-list = Collections.unmodifiableList(list);
-
-// After
-List<String> list = List.of("a", "b");
-```
-
-#### 5.2.2 Map Factory Methods
-```java
-// Before
-Map<String, Integer> map = new HashMap<>();
-map.put("a", 1);
-map.put("b", 2);
-
-// After
-Map<String, Integer> map = Map.of(
-    "a", 1,
-    "b", 2
-);
-```
-
----
-
-## 6. Security Updates
-
-### 6.1 TLS Configuration
-
-#### 6.1.1 Update Security Properties
-```properties
-# Disable older TLS versions
-jdk.tls.disabledAlgorithms=SSLv3, TLSv1, TLSv1.1
-```
-
-#### 6.1.2 Strong Encryption Defaults
-```java
-// Configure HTTPS connections
-System.setProperty("https.protocols", "TLSv1.3,TLSv1.2");
-System.setProperty("jdk.tls.client.protocols", "TLSv1.3,TLSv1.2");
-```
-
-### 6.2 Security Manager Deprecation
-
-#### 6.2.1 Remove Security Manager Usage
-```java
-// Identify and remove
-System.setSecurityManager(new SecurityManager());
-
-// Replace with alternative security measures
-// - Use container security
-// - Implement application-level security
-```
-
----
-
-## 7. Testing and Validation
-
-### 7.1 Comprehensive Testing
-
-#### 7.1.1 Unit Test Execution
-```bash
-# Run all unit tests
-mvn clean test -Dtest=**/*Test
-
-# With coverage
-mvn clean test jacoco:report
-```
-
-#### 7.1.2 Integration Testing
-```bash
-# Run integration tests
-mvn clean verify -Dskip.unit.tests=true
-```
-
-#### 7.1.3 Performance Testing
-- Benchmark critical paths
-- Compare with Java 8 baseline
-- Memory usage analysis
-- GC performance comparison
-
-### 7.2 Compatibility Testing
-
-#### 7.2.1 API Compatibility
-```bash
-# Use japicmp for API comparison
-mvn japicmp:cmp -DoldVersion=1.0.0-java8
-```
-
-#### 7.2.2 Binary Compatibility
-- Test with existing clients
-- Verify serialization compatibility
-- Check reflection-based frameworks
-
----
-
-## 8. Documentation Updates
-
-### 8.1 Code Documentation
-
-#### 8.1.1 Update JavaDoc
-```java
-/**
- * Process user data using modern Java 17 features.
- * @since Java 17
- * @implNote Uses records and pattern matching
- */
-public void processUserData(Object data) {
-    switch (data) {
-        case User(var name, var age) -> processUser(name, age);
-        case null -> handleNull();
-        default -> handleUnknown(data);
+  onSubmit() {
+    if (this.userForm.valid) {
+      console.log(this.userForm.value);
     }
+  }
 }
 ```
 
-#### 8.1.2 README Updates
-- Document Java 17 requirement
-- Update build instructions
-- List new features utilized
-- Migration guide for developers
+**After Runbooks Migration:**
 
-### 8.2 Deployment Documentation
+```typescript
+// Angular 15 with modern patterns
+import { Component, inject } from '@angular/core';
+import { FormBuilder, Validators, ReactiveFormsModule } from '@angular/forms';
+import { CommonModule } from '@angular/common';
 
-#### 8.2.1 Update Deployment Scripts
-```bash
-#!/bin/bash
-# Check Java version
-java_version=$(java -version 2>&1 | awk -F '"' '/version/ {print $2}')
-if [[ ! "$java_version" =~ ^17\. ]]; then
-    echo "Error: Java 17 required"
+@Component({
+  selector: 'app-user-form',
+  standalone: true,
+  imports: [CommonModule, ReactiveFormsModule],
+  template: `
+    <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+      <input formControlName="name" placeholder="Name">
+      <input formControlName="email" placeholder="Email">
+      <button type="submit" [disabled]="userForm.invalid">Submit</button>
+    </form>
+  `
+})
+export class UserFormComponent {
+  private fb = inject(FormBuilder);
 
-````
+  userForm = this.fb.nonNullable.group({
+    name: ['', Validators.required],
+    email: ['', [Validators.required, Validators.email]]
+  });
 
-</details>
+  onSubmit() {
+    if (this.userForm.valid) {
+      const formValue = this.userForm.getRawValue();
+      console.log(formValue);
+    }
+  }
+}
+```
 
+### Advanced migration scenarios
+
+#### Monolith to microservices migration
+
+**Large-scale architecture migration:**
+
+```
+"Migrate our monolithic application to microservices architecture:
+- Extract user management into a separate service
+- Create API gateways for service communication
+- Implement distributed tracing and monitoring
+- Maintain data consistency across services"
+```
+
+**Migration strategy:**
+
+1. **Service boundary analysis**: Identify logical service boundaries
+2. **API design**: Create clean interfaces between services
+3. **Data migration**: Handle database splitting and consistency
+4. **Infrastructure setup**: Container orchestration and service discovery
+5. **Gradual cutover**: Incremental migration with feature flags
+
+#### Cross-platform migration
+
+**Technology stack migration:**
+
+```
+"Migrate our .NET Framework application to .NET Core for cloud deployment:
+- Update framework-specific APIs to .NET Core equivalents
+- Migrate Entity Framework to EF Core
+- Update deployment configuration for containerization
+- Maintain Windows compatibility while adding Linux support"
+```
+
+**Comprehensive approach:**
+
+1. **Compatibility assessment**: Identify .NET Core compatibility issues
+2. **API migration**: Update framework-specific code
+3. **Configuration updates**: Modernize configuration patterns
+4. **Testing strategy**: Ensure cross-platform compatibility
+5. **Deployment modernization**: Container and cloud-ready deployment
+
+#### Legacy system modernization
+
+**Complete technology refresh:**
+
+```
+"Modernize our legacy jQuery application to React:
+- Convert jQuery DOM manipulation to React components
+- Replace Ajax calls with modern fetch API and state management
+- Implement modern routing and navigation
+- Add TypeScript for type safety"
+```
+
+**Modernization steps:**
+
+1. **Component identification**: Map jQuery code to React components
+2. **State management**: Implement modern state patterns
+3. **API integration**: Replace jQuery Ajax with modern patterns
+4. **UI modernization**: Update styling and user experience
+5. **Testing implementation**: Add comprehensive test coverage
+
+***
+
+### See also
+
+* [code-refactoring.md](code-refactoring.md "mention")
+* [product-backlog.md](product-backlog.md "mention")
